========================================
Change log for mod_reader
========================================

2019-11-11 (24)
 - remove unused declaration of global variables: $SESSION and $CFG

2019-11-08 (22)
 - standardize layout and spelling in CHANGES.txt

2019-11-08 (22)
 - when receiving quiz score from mreader API, update the image file name if necessary

2019-11-06 (21)
 - include all relevant name fields from profile when filtering report results by 'Full name'

2019-10-25 (19)
 - modify tool to fix book covers so that it can identify books uniquely on sites using mReader.org API

2019-09-17 (17)
 - remove leftover debugging code and deal with 'abandoned' attempts more robustly when displaying main page with view.php

2019-08-08 (15)
 - rename fields in install.xml: timeopen -> availablefrom, timeclose -> availableuntil, and remove private field from install.xml

2019-06-23 (13)
 - fix display of teacher grades when there are multiple attempts at a book

2019-05-30 (12)
 - remove 'continue' statement inside SWITCH block

2019-04-19 (11)
 - fix 'Namespace declaration statement has to be the very first statement' errors when including event objects for

2019-04-19 (10)
 - various small fixes to admin tools running on site where mReader API is enabled

2019-04-17 (09)
 - set maturity to STABLE

2019-04-17 (08)
 - modify the fix_bookcovers tool so that it works with the mreader.api

2019-04-10 (07)
 - various adjustments to allow for removal of Reader Quizzes course

2019-04-05 (06)
 - remove unused 'top' property of default object when fetching quizzes from moodle.reader.net

2019-04-02 (05)
 - add 'Top for' question category in Moodle >= 3.5, and extract book name from new format used in XML coming from moodlereader.net

2019-03-30 (04)
 - ensure 'modname' is defined when creating new activities in Moodle >= 3.5

2019-03-06 (03)
 - fix downloading of images from mreader.org

2019-01-21 (02)
 - remove use of 'events_trigger' for compatability with Moodle 3.6
