@@ -46,6 +46,9 @@ class mod_reader_admin_books_editsite_renderer extends mod_reader_admin_books_re
 
     public $mode = 'editsite';
 
+    /** the name of the form element that, if present, signifies content is to be downloaded */
+    protected $download_param_name = 'download';
+
     /**
      * get_tab
      *
