@@ -2,6 +2,9 @@
 Change log for mod_reader
 ========================================
 
+2019-11-13 (25)
+ - fix behavior of download button on 'Edit books (Site)' page
+
 2019-11-11 (24)
  - remove unused declaration of global variables: $SESSION and $CFG
 
